--- a/trello-project/build.gradle
+++ b/trello-project/build.gradle
@@ -25,6 +25,9 @@ repositories {
 
 dependencies {
 
+    //slack api
+    implementation 'com.slack.api:slack-api-client:1.27.2'
+
     //jwt
     implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
