--- a/trello-project/src/main/resources/application-local.yml
+++ b/trello-project/src/main/resources/application-local.yml
@@ -15,6 +15,14 @@ spring:
         format_sql: true
         show_sql: true
         use_sql_comments: true
+
+s3:
+  credentials:
+    access-key: ${S3_CREDENTIALS_ACCESS_KEY}
+    secret-key: ${S3_CREDENTIALS_SECRET_KEY}
+    region: ${S3_credentials_REGION}
+  bucket: ${S3_BUCKET}
+
 #server:
 #  servlet:
 #    encoding:
