--- a/trello-project/build.gradle
+++ b/trello-project/build.gradle
@@ -52,6 +52,8 @@ dependencies {
     testImplementation 'org.springframework.security:spring-security-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
+    implementation('org.springframework.boot:spring-boot-starter-data-redis')
+
     // aws
     implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
 }
