메인 브랜치로 병합 (#96)
* Update README.md

* Update README.md

* add: 워크스페이스, 멤버 엔티티 추가

* update: 멤버 역할 추가

* add: 멤버 레포지토리, 서비스, 컨트롤러 추가

* update: 멤버 역할 변경 서비스 메서드 추가

* add: 리스트 엔티티, 컨트롤러, 서비스, 레포지토리 추가

* add: 보드 엔티티 추가

* add: 카드 엔티티, 댓글 엔티티 추가

* Delete .idea directory

* fix: 카드 엔티티

* update: 멤버 역할 변경 기능 구현 완료

* update: api 경로 변경

* feat: 슬랙 알림 기능 추가

* feat: 리스트 CRUD 기능 구현

* delete: 테스트 파일 삭제

* feat: 슬랙 익셉션 알러트 알림 어노테이션, AOP 기능 추가

* update: 권한 설정 변경

* update: 예외 처리 수정

* add: 워크스페이스 컨트롤러, dto, 서비스, 레포지토리 생성

* update: 워크스페이스 생성 기능 구현

* delete .idea

* update: 내 워크스페이스 조회 기능 구현

* update: Transactional readOnly 추가

* feature: 카드 기능 구현 및 기본적인 엔티티 구현

* feature: 보드 기능 구현

* feature: 보드 기능 구현

* delete: .idea 파일

* feature: 댓글 기능 구현 및 URL 수정

* feature: 첨부파일 기능 구현 및 성능 개선

* feat: 카드 리스트 예외 추가

* fix: @AuthenticationPrincipal AuthUser authUser 추가 및 코드 수정

* update: 멤버 추가 기능 구현

* fix: Card 코드 수정

* fix: AccessDeniedException 코드 수정

* feature: 검색 기능 구현

* bugfix: 보드 코드 오류 수정

* bugfix: 검색 Impl 파일 오류 수정

* update: 멤버 삭제 기능

* update: 워크스페이스 삭제 API 구현

* update: 워크스페이스 수정 API 구현

* bugfix: 보드 url 추가

* bugfix: CardRepository 오류 수정

* bugfix: 보드 생성시 @RequestPart, @RequestBody 오류

* feat: 회원탈퇴 구현, 비밀번호 검증

* feat: s3 키 저장할 수 있도록 변경

* bugfix: 보드 생성, 수정 시 이미지 첨부 기능 수정

* fix: 카드 리스트 생성 시 반환 데이터 나오도록 수정 (#59)

* fix: 카드 리스트 생성 시 반환 데이터 나오도록 수정

* delete: 테스트 코드 삭제

* fix: 카드 리스트 조회 불가 수정 (#62)

* fix: 카드 코드 수정과 매니저 코드 수정 및 서치 코드 수정

* fix: 코멘트 코드 수정

* fix: 첨부파일 크기 설정 yml 수정 및 첨부파일 서비스 수정, 삭제 시 HttpStatus.OK로 메시지를 볼 수 있도록 수정

* feat: 슬랙 알림 AOP활용 어노테이션 추가 (#70)

* fix: 권한 버그 수정

* Feature/72 슬랙 알림 기능 수정 (#73)

* feat: 슬랙 알림 주요 정보 추가

* feat: 배포용 application-prod.yml 추가

* update: MemberRole 이름 변경

* update: 동시성 제어 추가

* feature 캐싱 기능 구현 및 코드 수정

* update: API 매핑 통일

* update: 필요없는 코드 삭제

* fix: redis sentine config 주석처리

* feat: redis senti

--- a/trello-project/src/main/resources/application-local.yml
+++ b/trello-project/src/main/resources/application-local.yml
@@ -6,22 +6,22 @@ spring:
     username: ${DB_USERNAME}
     password: ${DB_PASSWORD}
     driver-class-name: com.mysql.cj.jdbc.Driver
+  servlet:
+    multipart:
+      max-file-size: 5MB
+      max-request-size: 5MB
   jpa:
     show-sql: true
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     properties:
       hibernate:
         format_sql: true
         show_sql: true
         use_sql_comments: true
-#server:
-#  servlet:
-#    encoding:
-#      charset: utf-8
-#      force: true
-#jwt:
-#  secret:
-#    key: ${JWT_TOKEN}
-#admin:
-#  token: ${ADMINTOKEN}
+s3:
+  credentials:
+    access-key: ${S3_CREDENTIALS_ACCESS_KEY}
+    secret-key: ${S3_CREDENTIALS_SECRET_KEY}
+    region: ${S3_credentials_REGION}
+  bucket: ${S3_BUCKET}
