--- a/trello-project/build.gradle
+++ b/trello-project/build.gradle
@@ -25,6 +25,9 @@ repositories {
 
 dependencies {
 
+    //slack api
+    implementation 'com.slack.api:slack-api-client:1.27.2'
+
     //jwt
     implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
@@ -48,6 +51,13 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+    implementation('org.springframework.boot:spring-boot-starter-data-redis')
+
+    implementation 'org.springframework.boot:spring-boot-starter-cache'
+
+    // aws
+    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
 }
 
 tasks.named('test') {
